--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
-    "angular-scenario": ">=1.2.*"
+    "angular-scenario": ">=1.2.*",
+    "karma": "~0.1.0",
+    "karma-ng-html2js-preprocessor": "git@github.com:karma-runner/karma-ng-html2js-preprocessor.git"
   },
   "resolutions": {
     "jquery": ">= 2.1.0"
